@@ -1,27 +1,28 @@
-package dev.kyriji.common.commands.commands;
+package dev.kyriji.common.commands.commands.punishments;
 
 import dev.kyriji.common.commands.enums.CommandType;
 import dev.kyriji.common.commands.enums.ExecutorType;
 import dev.kyriji.common.commands.models.TritonCommand;
 import dev.kyriji.common.models.TritonCommandSender;
+import dev.kyriji.common.punishments.enums.PunishmentType;
+import dev.kyriji.common.punishments.utils.PunishmentUtils;
 
-import java.util.Arrays;
 import java.util.List;
 
-public class ProxyCommand extends TritonCommand {
+public class BanCommand extends TritonCommand {
 	@Override
 	public String getIdentifier() {
-		return "proxy";
+		return "ban";
 	}
 
 	@Override
 	public String getDescription() {
-		return "A test command";
+		return "Ban a player from the network";
 	}
 
 	@Override
 	public CommandType getCommandType() {
-		return CommandType.PROXY;
+		return CommandType.UNIVERSAL;
 	}
 
 	@Override
@@ -31,13 +32,11 @@ public class ProxyCommand extends TritonCommand {
 
 	@Override
 	public List<String> getTabCompletions(TritonCommandSender sender, String[] args) {
-		return Arrays.asList("test12", "test22", "test32");
+		return List.of();
 	}
 
 	@Override
-	public void execute(TritonCommandSender sender, String[] args) {
-		sender.sendMessage("Hello world from proxy!");
-		sender.sendMessage(Arrays.toString(args));
+	public void execute(TritonCommandSender player, String[] args) {
+		PunishmentUtils.applyPunishment(player, args, PunishmentType.BAN);
 	}
-
 }
